Added DOMUtilService and watch for data change

--- a/src/client/narrow_table_expandable_action.html
+++ b/src/client/narrow_table_expandable_action.html
@@ -26,8 +26,7 @@
                       </span>
                     </div>
                   </div>
-                  <button class="btn btn-primary">Create</button>
-                  <button class="btn btn-primary"><i class="fa fa-cloud-upload"></i> Launch Instance</button>
+                  <button class="btn btn-primary" ng-click="addRow()">Add Flavor</button>
                 </div>
               </th>
             </tr>
